visit https://hackmd.io/5Tg4rqrBQSaoW38Ru8oBFA?view for more info

===gradle_8.0=== 8/19 24pm
-reworked GUI
-added info page
-bug fix: button boundary



===gradle_7.3=== 8/15 22pm
-bug fix: matching game return button
-bug fix: minesweeper proper exit
-cleaned hardcoded parameters: teams, categories, problems per category

===gradle_7.2=== 8/14 12pm
-various bug fixes

===gradle_7.1=== 8/13 13pm
-various bug fixes


===gradle_7.0=== 8/13 10am
-added 歡樂端午節[2/avocado/1]
-added 失意的鱷魚[2/avocado/3]

===gradle_6.5=== 8/12 20pm
-clean up code


===gradle_6.4=== 8/12 19pm
-no longer uses deprecated apis

===gradle_6.3=== 8/12 12pm
-bug fix for various problems

===gradle_6.1~gradle_6.2=== 8/12 12pm
-new feature: image support for texture packs
-new button icons
-bug fix for various problems


===gradle_6.0=== 8/11 27pm
-new feature: post-solution slides
-added texture pack jungle
-added 沖繩驚魂記[2/funfacts/5]
-added PNG[2/funfacts/6]
-added 衛生習慣[2/nehs2/6]
-modified 孝順的彼得->孝順的總召[1/socio/5_1]
-modified 大怒神[2/nehs/5]
-removed 新詩共賞[1/lit/2]; added 隰有萇楚[1/lit/2_1]
-removed 鐵梨與鯊魚[1/socio/1]; added 阿平的獨裁派對[1/socio/1_1]
-removed 阿平的獨裁派對[1/socio/1_1]; added 小莉一家人[1/socio/1_2]
-removed 尋找威利[1/lit/1_1]; added 小莉一家人2[1/lit/1_2]
-bug fix: snake
-bug fix: background color not changing correctly
-bug fix: 左腳拖鞋 not changing color after clicking


===gradle_5.3=== 8/11 13pm
-new feature: press T to switch texture pack
-added texture pack punk
-added 拉鍊的原理[2/funfacts/2]
-added 消失的蠑螈[2/funfacts/3]
-added 害羞鯊魚[2/funfacts/4]
-modified 市場與螃蟹->經濟學與螃蟹[1/socio/3]



===gradle_5.2=== 8/10 25pm
-new feature: texture packs
-added texture packs: ocean, eggplant, classic, caramel, balloon


===gradle_5.1=== 8/10 10am
-added 超級正音班[2/funfacts/1]
-refined UI transition


===gradle_5.0=== 8/9 25pm
-new feature: no need for backspace now
-new feature: adjustable timing
-new feature: adjustable button font size
-bug fix: 風紀股長阿瓜[2/nehs/3] title mismatch
-reworked scoring
-added dependence for snake